--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<nav>
 			<h2 class="logo">My Portfolio</h2>
 			<ul>
-				<li><a class="active" href="section1">Home</a></li>
+				<li><a class="active" href="#section1">Home</a></li>
 				<li><a href="#section2">About Us</a></li>
 				<li><a href="#section3">Skills</a></li>
 				<li><a href="#section4">Projects</a></li>
