--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 						input, email, password and confirm-passowrd validations.
 					</p>
 					<p style="text-align: center;">
-						<a class="button" href="react-js-login-system-validation-ensyqwkwh-developerjame.vercel.app">Live Demo</a>
+						<a class="button" href="https://react-js-login-system-validation.vercel.app/">Live Demo</a>
 						<a class="button" href="https://github.com/developerjame/react-js_login-system-validation.git">GitHub</a>
 					</p>
 			    </div>
