--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<div class="popup">
 			<button class="close-btn">close</button>
 			<div class="popup-content">
-			<p>Please use the contacts below to reach out to me</p>
+			<p>Contact me via:</p>
 			<div class="popup-social">
 			  <a href="#"><i class="far fa-envelope"></i></a><h4 style="color: rgb(32, 29, 29);">jamesgathungun@gmail.com</h4>
 		    </div>
