--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				<img src="./images/pic2.png" height="200" width="335">
 				<h5>Todo-App</h5>
 				<div class="pra">
-					<p>This project was built as part of React js basic from w3school.
+					<p>This is my first project as part of React js basic from w3school.
 						 I added local storage for its data input. </p>
                   
 					<p style="text-align: center;">
@@ -125,6 +125,21 @@
 					<p style="text-align: center;">
 						<a class="button" href="#">Live Demo</a>
 						<a class="button" href="https://github.com/developerjame/Agroproducts.git">GitHub</a>
+					</p>
+				</div>
+				</div>
+				
+			</div>
+			<div class="card">
+				<img src="./images/pic4.png" height="200" width="335">
+				<h5>E-Collection</h5>
+				<div class="pra">
+					<p>A digital e-commerce application that use APIs to fetch products. I built it with
+						React js, css and bootstrap frontend.</p>
+                  <div class="card-2">
+					<p style="text-align: center;">
+						<a class="button" href="https://e-collection.vercel.app/">Live Demo</a>
+						<a class="button" href="https://github.com/developerjame/E-Collection.git">GitHub</a>
 					</p>
 				</div>
 				</div>
