--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<label for="check" class="checkbtn">
 				<i class="fa fa-bars"></i>
 			</label>
-			<img src="./images/img1.png" height="100" width="180" style="margin-top: -30px;">
+			<img src="./images/img1.png" height="75" width="300" style="margin-top: -30px;">
 			<ul>
 				<li><a class="active" href="#section1">Home</a></li>
 				<li><a href="#section2">About Us</a></li>
@@ -50,7 +50,7 @@
 				<p>I am a full-stack developer and UI/UX designer with figma. I can make a beautiful and pixel perfect web-page designs. I also build
 			        responsive website more & more interactive which can be accessible to all users, regardless of their device.</p>
 				<button style="margin-right: 30px;" id="open-popup" type="button">Hire Me</button>
-				<button onclick="location.href='document/example.pdf';">My Resume</button>
+				<button onclick="location.href='document/james_gathungu.pdf';">My Resume</button>
 			</div>
 		</div>
 		
@@ -131,6 +131,19 @@
 				</div>
 				
 			</div>
+
+			<div class="card">
+				<img src="./images/pic5.png" height="200" width="335">
+				<h5>Adventure App</h5>
+				<div class="pra">
+					<p>A responsive website developed with React js.
+					</p>
+					<p style="text-align: center;">
+						<a class="button" href="">Live Demo</a>
+						<a class="button" href="">GitHub</a>
+					</p>
+			    </div>
+		    </div>
 
 			<div class="card">
 				<img src="./images/pic3.png" height="200" width="335">
