--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<p>I am a full-stack developer and UI/UX designer with figma. I can make a beautiful and pixel perfect web-page designs. I also build
 			        responsive website more & more interactive which can be accessible to all users, regardless of their device.</p>
 				<button style="margin-right: 30px;" id="open-popup" type="button">Hire Me</button>
-				<button onclick="location.href='document/james_gathungu.pdf';">My Resume</button>
+				<button onclick="location.href='#'">My Resume</button>
 			</div>
 		</div>
 		
@@ -141,6 +141,19 @@
 					<p style="text-align: center;">
 						<a class="button" href="https://adventure-app-one.vercel.app/">Live Demo</a>
 						<a class="button" href="https://github.com/developerjame/Adventure-App.git">GitHub</a>
+					</p>
+			    </div>
+		    </div>
+
+			<div class="card">
+				<img src="./images/pic6.png" height="200" width="335">
+				<h5>Software Jobs Management App</h5>
+				<div class="pra">
+					<p>A responsive website developed with React js.
+					</p>
+					<p style="text-align: center;">
+						<a class="button" href="#">Live Demo</a>
+						<a class="button" href="https://github.com/developerjame/Software-Jops-Management-App.git">GitHub</a>
 					</p>
 			    </div>
 		    </div>
