--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 				<img src="./images/pic6.png" height="200" width="335">
 				<h5>Software Jobs Management App</h5>
 				<div class="pra">
-					<p>A responsive website developed with React js.
+					<p>My first Laravel App project done on practice.
 					</p>
 					<p style="text-align: center;">
 						<a class="button" href="#">Live Demo</a>
