--- a/index.html
+++ b/index.html
@@ -147,13 +147,13 @@
 
 			<div class="card">
 				<img src="./images/pic6.png" height="200" width="335">
-				<h5>Software Jobs Management App</h5>
+				<h5>Software Job Tracking App</h5>
 				<div class="pra">
 					<p>My first Laravel App project done on practice.
 					</p>
 					<p style="text-align: center;">
 						<a class="button" href="#">Live Demo</a>
-						<a class="button" href="https://github.com/developerjame/Software-Jops-Management-App.git">GitHub</a>
+						<a class="button" href="https://github.com/developerjame/Software-Job-Tracking-App.git">GitHub</a>
 					</p>
 			    </div>
 		    </div>
