--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 		<p>For more information - please contact me as below:</p>
 		<div class="social">
 			
-			<a href="#"><i class="far fa-envelope"></i></a><h4 style="color: white; margin-right: 20px;">jamesgathungun@gmail.com</h4>
+			<a href="https://mail.google.com/mail/?view=cm&fs=1&to=jamesgathungun@gmail.com"><i class="far fa-envelope"></i></a><h4 style="color: white; margin-right: 20px;">jamesgathungun@gmail.com</h4>
 			<a href="#"><i class="fas fa-phone"></i></a><h4 style="color: white;">0743481039</h4>
 
 		</div>
@@ -243,7 +243,7 @@
 		<div class="popup-content">
 		<p>Contact me via:</p>
 		<div class="popup-social">
-		  <a href="#"><i class="far fa-envelope"></i></a><h4 style="color: rgb(32, 29, 29);">jamesgathungun@gmail.com</h4>
+		  <a href="https://mail.google.com/mail/?view=cm&fs=1&to=jamesgathungun@gmail.com"><i class="far fa-envelope"></i></a><h4 style="color: rgb(32, 29, 29);">jamesgathungun@gmail.com</h4>
 		</div>
 		<div class="popup-social">
 		  <a href="#"><i class="fab fa-whatsapp"></i></a><h4 style="color: rgb(27, 23, 23);">0743481039</h4>
