--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 		<div class="social">
 			
 			<a href="https://mail.google.com/mail/?view=cm&fs=1&to=jamesgathungun@gmail.com"><i class="far fa-envelope"></i></a><h4 style="color: white; margin-right: 20px;">jamesgathungun@gmail.com</h4>
-			<a href="#"><i class="fas fa-phone"></i></a><h4 style="color: white;">0743481039</h4>
+			<a href="tel:+254743481039"><i class="fas fa-phone"></i></a><h4 style="color: white;">0743481039</h4>
 
 		</div>
   
@@ -246,7 +246,7 @@
 		  <a href="https://mail.google.com/mail/?view=cm&fs=1&to=jamesgathungun@gmail.com"><i class="far fa-envelope"></i></a><h4 style="color: rgb(32, 29, 29);">jamesgathungun@gmail.com</h4>
 		</div>
 		<div class="popup-social">
-		  <a href="#"><i class="fab fa-whatsapp"></i></a><h4 style="color: rgb(27, 23, 23);">0743481039</h4>
+		  <a href="tel:+254743481039"><i class="fab fa-whatsapp"></i></a><h4 style="color: rgb(27, 23, 23);">0743481039</h4>
 		</div>
 		</div>
 	</div> 
