--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 					<p>A responsive website developed with React js.
 					</p>
 					<p style="text-align: center;">
-						<a class="button" href="https://adventure-app-one.vercel.app/">Live Demo</a>
+						<a class="button" href="https://adventure-app-gamma.vercel.app/">Live Demo</a>
 						<a class="button" href="https://github.com/developerjame/Adventure-App.git">GitHub</a>
 					</p>
 			    </div>
