--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
 
 				<h2>About Me</h2>
 				<h5>Developer <span>& Designer</span></h5>
-				<p>I am a full-stack developer and UI/UX designer with figma. I can make a beautiful and pixel perfect web-page designs. I also build
-			        responsive website more & more interactive which can be accessible to all users, regardless of their device.</p>
+				<p>I am a full-stack developer and UI/UX designer with experience in Figma. I can create beautiful and pixel-perfect 
+					web page designs. I also build responsive websites that are more interactive and accessible to all users, regardless 
+					of their device.</p>
 				<button style="margin-right: 30px;" id="open-popup" type="button">Hire Me</button>
 				<button onclick="location.href='#'">My Resume</button>
 			</div>
@@ -92,8 +93,7 @@
 				<img src="./images/pic2.png" height="200" width="335">
 				<h5>Todo-App</h5>
 				<div class="pra">
-					<p>This is my first project as part of React js basic from w3school.
-						 I added local storage for its data input. </p>
+					<p>This is my first project as part of React.js basics from W3Schools. I added local storage for its data input. </p>
                   
 					<p style="text-align: center;">
 						<a class="button" href="https://todo-list-app-delta-olive.vercel.app/">Live Demo</a>
@@ -105,9 +105,9 @@
 				<img src="./images/pic1.png" height="200" width="335">
 				<h5>Agroproduct E-market</h5>
 				<div class="pra">
-					<p>This is a web application that contains digital marketing and simple 
-						farmer's admin page consisting of inventory system. I built it with php
-					as backend; html, css, bootstrap and javascript as frontend</p>
+					<p>This is a web application that contains digital marketing and a simple farmer's admin page consisting 
+						of an inventory system. I built it with PHP as the backend and HTML, CSS, Bootstrap, and JavaScript as 
+						the frontend.</p>
                   <div class="card-2">
 					<p style="text-align: center;">
 						<a class="button" href="#">Live Demo</a>
@@ -121,8 +121,8 @@
 				<img src="./images/pic4.png" height="200" width="335">
 				<h5>E-Collection</h5>
 				<div class="pra">
-					<p>A digital e-commerce application that use APIs to fetch products. I built it with
-						React js, css and bootstrap frontend.</p>
+					<p>A digital e-commerce application that uses APIs to fetch products. I built it with React.js, 
+						CSS, and Bootstrap for the frontend.</p>
                   <div class="card-2">
 					<p style="text-align: center;">
 						<a class="button" href="https://e-collection.vercel.app/">Live Demo</a>
@@ -137,7 +137,7 @@
 				<img src="./images/pic5.png" height="200" width="335">
 				<h5>Adventure App</h5>
 				<div class="pra">
-					<p>A responsive website developed with React js.
+					<p>A responsive website developed with React.js.
 					</p>
 					<p style="text-align: center;">
 						<a class="button" href="https://adventure-app-gamma.vercel.app/">Live Demo</a>
@@ -150,7 +150,7 @@
 				<img src="./images/pic6.png" height="200" width="335">
 				<h5>Software Job Posting App</h5>
 				<div class="pra">
-					<p>My first Laravel App project done on practice.
+					<p>My first Laravel app project is done as practice.
 					</p>
 					<p style="text-align: center;">
 						<a class="button" href="#">Live Demo</a>
@@ -164,9 +164,9 @@
 				<h5>Login form validation</h5>
 					<h5> system</h5>
 				<div class="pra">
-					<p>I built it with React js hooks and other React features. initially, it was built
-						without any single validation. Eventually added all the required validation including
-						input, email, password and confirm-passowrd validations.
+					<p>I built it with React.js hooks and other React features. Initially, it was built without any 
+						validation. Eventually, I added all the required validations, including input, email, password, 
+						and confirm-password validations.
 					</p>
 					<p style="text-align: center;">
 						<a class="button" href="https://react-js-login-system-validation.vercel.app/">Live Demo</a>
@@ -204,7 +204,7 @@
 			<h1>Contact us</h1>
 			  
 		</div>
-		<p>For more information - please contact me as below:</p>
+		<p>For more information, please contact me as follows:</p>
 		<div class="social">
 			
 			<a href="https://mail.google.com/mail/?view=cm&fs=1&to=jamesgathungun@gmail.com"><i class="far fa-envelope"></i></a><h4 style="color: white; margin-right: 20px;">jamesgathungun@gmail.com</h4>
@@ -212,7 +212,7 @@
 
 		</div>
   
-		<p style="color: white;">For more Web-applications and designs - please click on the links belows:</p>
+		<p style="color: white;">For more web applications and designs, please click on the links below.</p>
 		<div class="social">
 			
 			<a href="https://github.com/developerjame"><i class="fab fa-github"></i></a>
