--- a/index.html
+++ b/index.html
@@ -160,6 +160,20 @@
 		    </div>
 
 			<div class="card">
+				<img src="./images/vehicle.png" height="200" width="335">
+				<h5>Vehicle Mechanics App</h5>
+				<div class="pra">
+					<p>I integrated backend functionality and an admin page into an existing website. 
+						Using JavaScript, the website now calculates estimated costs for various vehicle services.
+					</p>
+					<p style="text-align: center;">
+						<a class="button" href="">Live Demo</a>
+						<a class="button" href="https://github.com/developerjame/Vehicle-Mechanic_App.git">GitHub</a>
+					</p>
+			    </div>
+		    </div>
+
+			<div class="card">
 				<img src="./images/pic3.png" height="200" width="335">
 				<h5>Login form validation</h5>
 					<h5> system</h5>
