--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 		<p>For more information, please contact me as follows:</p>
 		<div class="social">
 			
-			<a href="https://mail.google.com/mail/?view=cm&fs=1&to=jamesgathungun@gmail.com"><i class="far fa-envelope"></i></a><h4 style="color: white; margin-right: 20px;">jamesgathungun@gmail.com</h4>
+			<a href="https://mail.google.com/mail/?view=cm&fs=1&to=ndirangugathunguj@gmail.com"><i class="far fa-envelope"></i></a><h4 style="color: white; margin-right: 20px;">ndirangugathunguj@gmail.com</h4>
 			<a href="tel:+254743481039"><i class="fas fa-phone"></i></a><h4 style="color: white;">0743481039</h4>
 
 		</div>
