--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 		<div class="popup-content">
 		<p>Contact me via:</p>
 		<div class="popup-social">
-		  <a href="https://mail.google.com/mail/?view=cm&fs=1&to=jamesgathungun@gmail.com"><i class="far fa-envelope"></i></a><h4 style="color: rgb(32, 29, 29);">jamesgathungun@gmail.com</h4>
+		  <a href="https://mail.google.com/mail/?view=cm&fs=1&to=ndirangugathunguj@gmail.com"><i class="far fa-envelope"></i></a><h4 style="color: rgb(32, 29, 29);">ndirangugathunguj@gmail.com</h4>
 		</div>
 		<div class="popup-social">
 		  <a href="tel:+254743481039"><i class="fab fa-whatsapp"></i></a><h4 style="color: rgb(27, 23, 23);">0743481039</h4>
