--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<label for="check" class="checkbtn">
 				<i class="fa fa-bars"></i>
 			</label>
-			<img src="./images/img1.png" height="70" width="200" style="margin-top: -30px;">
+			<img src="./images/logo2.png" height="70" width="200" style="margin-top: -30px;">
 			<ul>
 				<li><a class="active" href="#section1">Home</a></li>
 				<li><a href="#section2">About Us</a></li>
