--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 				<div class="pra">
                   
 					<p style="text-align: center;">
-						<a class="button" href="https://www.figma.com/proto/RcZOwQxxWaplvboPUUO3W8/Untitled?node-id=126-69&starting-point-node-id=126%3A69">Live Demo</a>
+						<a class="button" href="https://www.figma.com/proto/RcZOwQxxWaplvboPUUO3W8/Untitled?node-id=126-69&starting-point-node-id=126%3A69&scaling=scale-down">Live Demo</a>
 					</p>
 				</div>
 			</div>
