--- a/index.html
+++ b/index.html
@@ -227,6 +227,16 @@
 					</p>
 				</div>
 			</div>
+			<div class="card2">
+				<img src="./images/design2.png" height="200" width="335">
+				<h5>Dark Theme Web Design</h5>
+				<div class="pra">
+                  
+					<p style="text-align: center;">
+						<a class="button" href="https://www.figma.com/proto/RcZOwQxxWaplvboPUUO3W8/Untitled?node-id=126-69&starting-point-node-id=126%3A69&scaling=scale-down">Live Demo</a>
+					</p>
+				</div>
+			</div>
 
 			
 		</div>
