--- a/index.html
+++ b/index.html
@@ -247,6 +247,16 @@
 					</p>
 				</div>
 			</div>
+			<div class="card2">
+				<img src="./images/design4.png" height="200" width="335">
+				<h5>Single-page web design</h5>
+				<div class="pra">
+                  
+					<p style="text-align: center;">
+						<a class="button" href="">Live Demo</a>
+					</p>
+				</div>
+			</div>
 
 			
 		</div>
