--- a/index.html
+++ b/index.html
@@ -64,14 +64,16 @@
 			<div class="skills">
 				<p>
 				<button>Laravel</button>
-				<button>React js</button>
 				<button>PHP</button>
-				<button>Python</button>
-				<button>MySQL</button>
+				<button>React js</button>
+				<button>JavaScript</button>
+				<button>UI/UX Design</button>
+				<button>Figma</button>
 				</p>
 				<p>
-			    <button>JavaScript</button>
-				<button>Figma</button>
+				<button>Problem Solving</button>
+				<button>MySQL</button>
+			    <button>Python</button>
 				<button>Networking</button>
 				<button>Computer Hardware</button>
 				<button>Bootstrap</button>
