--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<button>JavaScript</button>
 				<button>UI/UX Design</button>
 				<button>Figma</button>
-				<button>REST APIs</button>
+				<button>Canva</button>
 				</p>
 				<p>
 				<button>Problem Solving</button>
