--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 				<button>Networking</button>
 				<button>Computer Hardware</button>
 				<button>Bootstrap</button>
+				<button>UI/UX Design</button>
 				</p>
 			</div>
 		</div>
