--- a/index.html
+++ b/index.html
@@ -251,6 +251,16 @@
 				</div>
 			</div>
 			<div class="card2">
+				<img src="./images/farm.png" height="200" width="335">
+				<h5>Farm Shop web design</h5>
+				<div class="pra">
+                  
+					<p style="text-align: center;">
+						<a class="button" href="https://www.figma.com/proto/X8e6VYzFRfn7vICdgIvTEP/Farm-Shop-Design?type=design&node-id=26-6&t=gMPgel3YbsdvbAXp-0&scaling=scale-down&page-id=26%3A5&starting-point-node-id=26%3A6">Live Demo</a>
+					</p>
+				</div>
+			</div>
+			<div class="card2">
 				<img src="./images/design4.png" height="200" width="335">
 				<h5>Single-page web design</h5>
 				<div class="pra">
