--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<li><a href="#section2">About Us</a></li>
 				<li><a href="#section3">Skills</a></li>
 				<li><a href="#section4">Projects</a></li>
-				<li><a href="#section3">UI/UX Design</a></li>
+				<li><a href="#sectionUI">UI/UX Design</a></li>
 				<li><a href="#section5">Contact Us</a></li>
 			</ul>
 			
