--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					web page designs. I also build responsive websites that are more interactive and accessible to all users, regardless 
 					of their device.</p>
 				<button style="margin-right: 30px;" id="open-popup" type="button">Hire Me</button>
-				<button onclick="location.href='#section2'">My Resume</button>
+				<button onclick="location.href='document/James CV.pdf'">My Resume</button>
 			</div>
 		</div>
 		
