--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	</section>
 	<section class="about" id="section2">
 		<div class="main">
-			<img src="./images/img2.jpg">
+			<img src="./images/img2.png">
 			<div class="about-text">
 
 				<h2>About</h2>
