--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 				<h2>About</h2>
 				<h5>Developer <span>& Designer</span></h5>
-				<p>I am a full-stack developer and UI/UX designer with experience in Figma. I can create beautiful and pixel-perfect 
+				<p>I am a full-stack developer and UI/UX designer. I can create beautiful and pixel-perfect 
 					web page designs. I also build responsive websites that are more interactive and accessible to all users, regardless 
 					of their device.</p>
 				<button style="margin-right: 30px;" id="open-popup" type="button">Hire Me</button>
