--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<label id="hamburger" for="check" class="checkbtn">
 				<i class="fa fa-bars"></i>
 			</label>
-			<img src="./images/logo2.png" height="70" width="200" style="margin-top: 0px;">
+			<img src="./images/logo.png" height="70" width="85" style="margin-top: 0px;">
 			<ul>
 				<li><a id="menu-nkli" class="active" href="#section1">Home</a></li>
 				<li><a id="menu-nkli" href="#section2">About</a></li>
